# crawl4ai-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cli.py  core.py  pyproject.toml
.cursor/rules/: rule.mdc
configs/: __init__.py  browser.py  crawler.py  deep_crawl.py
prompts/: 20251007_010459.md  20251007_154633.md  20251007_154814.md  20251007_155332.md  20251007_155734.md  20251007_155911.md  20251007_155937.md  20251007_160211.md  20251007_160302.md  20251007_160415.md  20251007_160846.md  20251009_203902.md  20251009_204254.md  20251009_204515.md  20251009_204836.md  20251009_205026.md  20251009_205043.md  20251009_205353.md  20251102_181036.md  20251102_181047.md  20251102_181750.md  20251102_182005.md  20251212_094315.md  20251217_214631.md  20251217_215115.md  20251217_215449.md  20251217_222000_web_crawling_vs_scraping.md  2026-02-11.json  mcp_project_structure_research.md  playwright_browser_cache_research.md  prompt.md
src/: main.py
src/config/: browser.py  markdown.py  run.py
src/crawl4ai_mcp_server/: __init__.py  cli.py  core.py  server.py
src/crawl4ai_mcp_server/configs/: __init__.py  browser.py  crawler.py  deep_crawl.py
src/crawl4ai_mcp_server/strategies/: __init__.py  content.py
src/crawl4ai_mcp_server/utils/: domain.py
src/utils/: arg.py  file.py
tests/: README.md  test_crawl4ai.py  test_ddg_search.py
utils/: __init__.py  path.py
